# tenanter

./: db.sqlite3  pyproject.toml
config/: api.py  settings.py  urls.py
core/: admin.py  models.py  urls.py  views.py
core/middleware/: easy.py  tenants.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  products.py  tenants.py  users.py
core/templates/core/: index.html  product_list.html
repairs/: api.py  models.py  schemas.py  utils.py
